[gd_scene load_steps=22 format=3 uid="uid://b3aulopd4gf6w"]

[ext_resource type="Script" uid="uid://dsymnb2wwnijf" path="res://ENEMIES/locked_axis_enemy.gd" id="1_oqln8"]
[ext_resource type="PackedScene" uid="uid://1piv26fr88nh" path="res://ENEMIES/bullet.tscn" id="2_7kfa1"]
[ext_resource type="PackedScene" uid="uid://b06uac3jqkxk5" path="res://SYSTEMS/HITBOX|HURTBOX/hitbox.tscn" id="3_gd4tf"]
[ext_resource type="Shader" uid="uid://coyyspyiw13hi" path="res://SYSTEMS/pixel.gdshader" id="5_laocb"]
[ext_resource type="Texture2D" uid="uid://vnc5qktmlsyn" path="res://ENEMIES/ENEMY_SPRITES/ENEMY_REDO1-sheet.png" id="6_ocdrb"]
[ext_resource type="Texture2D" uid="uid://bot6jf8hwbh45" path="res://ASSETS/WORLD_ASSETS/LIGHT.png" id="7_ocdrb"]
[ext_resource type="Shader" uid="uid://5joua5kx7r07" path="res://SYSTEMS/SCREEN_UI/glitch.gdshader" id="7_wfofw"]
[ext_resource type="Texture2D" uid="uid://dl6h7df6sctsc" path="res://ENEMIES/ENEMY_SPRITES/ENEMY_REDO4.png" id="8_wfofw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6hmhg"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7kfa1"]
radius = 12.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ocdrb"]
shader = ExtResource("5_laocb")
shader_parameter/outline_color = Color(0.945098, 0.964706, 0.941176, 1)
shader_parameter/corner_pixel = true

[sub_resource type="AtlasTexture" id="AtlasTexture_wfofw"]
atlas = ExtResource("6_ocdrb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbxsx"]
atlas = ExtResource("6_ocdrb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8phlu"]
atlas = ExtResource("6_ocdrb")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ov45"]
atlas = ExtResource("6_ocdrb")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yyce"]
atlas = ExtResource("6_ocdrb")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rgi0u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfofw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbxsx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8phlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ov45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yyce")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_yjwou"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rduwd"]
resource_name = "default"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eiw2i"]
_data = {
&"RESET": SubResource("Animation_yjwou"),
&"default": SubResource("Animation_rduwd")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dbxsx"]
shader = ExtResource("7_wfofw")
shader_parameter/shake_power = 0.03
shader_parameter/shake_rate = 0.2
shader_parameter/shake_speed = 5.0
shader_parameter/shake_block_size = 30.5
shader_parameter/shake_color_rate = 0.01

[node name="locked_axis_enemy" type="CharacterBody2D" groups=["ENEMY"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_oqln8")
bullet_node = ExtResource("2_7kfa1")
x_value = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6hmhg")

[node name="FloorDetection" type="RayCast2D" parent="."]
target_position = Vector2(0, 12)

[node name="CeilingDetection" type="RayCast2D" parent="."]
target_position = Vector2(0, -12)

[node name="WallDetection" type="RayCast2D" parent="."]
target_position = Vector2(-12, 0)

[node name="WallDetection2" type="RayCast2D" parent="."]
target_position = Vector2(12, 0)

[node name="Hitbox" parent="." instance=ExtResource("3_gd4tf")]
damage = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("CircleShape2D_7kfa1")

[node name="Speed" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_ocdrb")
sprite_frames = SubResource("SpriteFrames_rgi0u")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_eiw2i")
}
autoplay = "default"

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.588235, 0.662745, 0.756863, 1)
energy = 0.5
shadow_enabled = true
texture = ExtResource("7_ocdrb")
texture_scale = 1.63

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_dbxsx")
scale = Vector2(0.25, 0.25)
texture = ExtResource("8_wfofw")

[connection signal="timeout" from="Speed" to="." method="_on_speed_timeout"]

[editable path="Hitbox"]
